--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,7 @@
   "editor.formatOnType": false, // required
   "editor.formatOnSave": true, // optional
   "editor.formatOnSaveMode": "file", // required to format on save
-  "files.autoSave": "onFocusChange" // optional but recommended
+  // "files.autoSave": "onFocusChange",
+  "liveServer.settings.port": 5501,
+  "cSpell.words": ["signin"] // optional but recommended
 }
